# hack-nation

./: .gitignore  README.md  demo.sh  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: demo_genomes.json  diversity.json  models.joblib  rationale_cache.json  results.csv
data/amrfinder_out/: 1079901.3.tsv  28901.24344.tsv  54388.377.tsv
demo/: app.py  collapse.py  coverage.py  diversity.py  pipeline.py  preflight.py  presets.py  reliability.py  report_table.py  verdict.py
docs/: GLOSSARY.md
docs/adr/: 0003-species-drugs-methodology.md  0004-clinical-label-layer.md  0005-methodology-hardening.md  0007-usp-conformal-firewall.md  TEMPLATE.md
docs/assets/: README.md  coverage_novelty.csv  reliability.csv  (+1 more)
prompts/: README.md  rationale.txt
scripts/: annotate.py  bake_diversity.py  bake_rationales.py  capture_screens.py  coverage_novelty.py  make_hero.py  pick_demo_genomes.py  preflight.py  pull_data.py  reliability.py  render_static_report.py  report.py  run_evaluation.py  select_cohort.py  smoke_annotate.py  smoke_demo.py  smoke_rationale.py  train_models.py
tests/: test_amrfinder.py  test_app_launcher.py  test_atomicio.py  test_cloud_deploy.py  test_cohort.py  test_collapse.py  test_collapse_chart.py  test_core.py  test_coverage.py  test_dataset.py  test_demo_pipeline.py  test_demo_verdict.py  test_diversity.py  test_drugs.py  test_env.py  test_evaluate.py  test_mash.py  test_metrics.py  test_mic.py  test_model_core.py  test_preflight.py  test_presets.py  test_qrdr_beat.py  test_rationale.py  test_report_table.py  test_split.py  test_train.py
(+27 files in other folders)
